chore: fix OutOfMemory during release with cobertura